@@ -174,16 +174,18 @@ address {
   margin: 0 0 15px; }
 
 pre {
-  background: #eee;
   font-family: "Courier 10 Pitch", Courier, monospace;
   font-size: 14px;
   font-size: 1.4rem;
   padding: 15px;
   overflow: auto;
-  max-width: 100%; }
+  max-width: 100%;
+  margin-bottom: 15px; }
 
 code, kbd, tt, var {
-  font: 14px Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace; }
+  font-family: "Courier 10 Pitch", Courier, monospace;
+  font-size: 14px;
+  font-size: 1.4rem; }
 
 abbr, acronym {
   border-bottom: 1px dotted #666666;
@@ -468,6 +470,13 @@ button:active, input[type="submit"]:active, input[type="button"]:active, input[t
   border: none;
   border-top: 2px solid black;
   padding: 7px 24px 8px; }
+
+pre {
+  border: 1px solid #292929;
+  border-top: none;
+  box-shadow: inset 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  background: #191919; }
 
 /* =Structure
 ----------------------------------------------- */
